--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "af64a71d-eabf-45c4-874b-220dc3137714"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
